--- a/style.css
+++ b/style.css
@@ -3,7 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  height: 100vh;
+
+#webgl {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+header {
+  position: absolute;
   width: 100%;
+  color: white;
 }
