--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 #webgl {
@@ -14,4 +17,58 @@ header {
   position: absolute;
   width: 100%;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 40px;
+}
+
+header .logo {
+  font-size: 27px;
+}
+
+header nav ul {
+  list-style: none;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin-right: 30px;
+}
+
+header nav ul li a {
+  position: relative;
+  text-decoration: none;
+  color: white;
+}
+
+header nav ul li a::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  bottom: -10px;
+  left: 0;
+  transform: scale(0, 1);
+  transform-origin: center top;
+  transition: all 0.5s ease;
+}
+
+header nav ul li a:hover::after {
+  transform: scale(1, 1);
+}
+
+main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+main h2 {
+  color: white;
+  font-size: 130px;
+  white-space: nowrap;
 }
